sandbox/output
StringCalculatorTest.java:31: error: cannot find symbol
    @Test(Expected=Exception.class)
                            ^
  symbol:   method Expected()
  location: @interface Test
1 error
